# games_bot

./: .clang-format  .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.ninja  compile_commands.json  dump.pcap
src/: main.cpp  main.hpp
src/games/battleships/: battleships.cpp  battleships.hpp
src/games/hangman/: hangman.cpp  hangman.hpp
src/games/minesweeper/: minesweeper.cpp  minesweeper.hpp
src/games/puzzle_15/: puzzle_15.cpp  puzzle_15.hpp
src/games/rubiks_cube/: rubiks_cube.cpp  rubiks_cube.hpp
src/games/sudoku/: sudoku.cpp  sudoku.hpp
src/module/: module.cpp  module.hpp  modules_manager.cpp  modules_manager.hpp
src/modules/achievements_processing/: CMakeLists.txt  achievements_processing.hpp  achievements_processing_impl.cpp  achievements_processing_impl.hpp
src/modules/admin_terminal/: CMakeLists.txt  (+8 more)
src/modules/crypto/: CMakeLists.txt  crypto.hpp  crypto_impl.cpp  crypto_impl.hpp
src/modules/database/: CMakeLists.txt  database.hpp  database_impl.cpp  database_impl.hpp
src/modules/discord/discord/: CMakeLists.txt  discord.cpp  discord.hpp  discord_command.cpp  discord_command.hpp  discord_command_impl.cpp  discord_command_impl.hpp  discord_impl.cpp  discord_impl.hpp
src/modules/discord/discord_achievements_processing/: CMakeLists.txt  discord_achievements_processing.hpp  discord_achievements_processing_impl.cpp  discord_achievements_processing_impl.hpp
src/modules/discord/discord_bot/: CMakeLists.txt  discord_bot.cpp  discord_bot.hpp  discord_bot_impl.cpp  discord_bot_impl.hpp  discord_cluster.cpp  discord_cluster.hpp
src/modules/discord/discord_command_handler/: CMakeLists.txt  discord_command_handler.cpp  discord_command_handler.hpp  discord_command_handler_impl.cpp  discord_command_handler_impl.hpp
src/modules/discord/discord_commands/games/2048/: CMakeLists.txt  discord_2048_command.hpp  discord_2048_command_impl.cpp  discord_2048_command_impl.hpp
src/modules/discord/discord_commands/games/battleships/: CMakeLists.txt  discord_battleships_command.hpp  discord_battleships_command_impl.cpp  discord_battleships_command_impl.hpp
src/modules/discord/discord_commands/games/chess/: CMakeLists.txt  discord_chess_command.hpp  discord_chess_command_impl.cpp  discord_chess_command_impl.hpp
src/modules/discord/discord_commands/games/connect_four/: CMakeLists.txt  discord_connect_four_command.hpp  discord_connect_four_command_impl.cpp  discord_connect_four_command_impl.hpp
src/modules/discord/discord_commands/games/dominoes/: CMakeLists.txt  discord_dominoes_command.hpp  discord_dominoes_command_impl.cpp  discord_dominoes_command_impl.hpp
src/modules/discord/discord_commands/games/hangman/: CMakeLists.txt  discord_hangman_command.hpp  discord_hangman_command_impl.cpp  discord_hangman_command_impl.hpp
src/modules/discord/discord_commands/games/minesweeper/: CMakeLists.txt  discord_minesweeper_command.hpp  discord_minesweeper_command_impl.cpp  discord_minesweeper_command_impl.hpp
src/modules/discord/discord_commands/games/puzzle_15/: CMakeLists.txt  discord_puzzle_15_command.hpp  discord_puzzle_15_command_impl.cpp  discord_puzzle_15_command_impl.hpp
src/modules/discord/discord_commands/games/rubiks_cube/: CMakeLists.txt  discord_rubiks_cube_command.hpp  discord_rubiks_cube_command_impl.cpp  discord_rubiks_cube_command_impl.hpp
src/modules/discord/discord_commands/games/sudoku/: CMakeLists.txt  discord_sudoku_command.hpp  discord_sudoku_command_impl.cpp  discord_sudoku_command_impl.hpp
src/modules/discord/discord_commands/games/tic_tac_toe/: CMakeLists.txt  discord_tic_tac_toe_command.hpp  discord_tic_tac_toe_command_impl.cpp  discord_tic_tac_toe_command_impl.hpp
src/modules/discord/discord_commands/other/help/: CMakeLists.txt  discord_command_help.hpp  discord_command_help_impl.cpp  discord_command_help_impl.hpp
src/modules/discord/discord_commands/other/ping/: CMakeLists.txt  discord_command_ping.hpp  discord_command_ping_impl.cpp  discord_command_ping_impl.hpp
src/modules/discord/discord_commands/other/premium/: CMakeLists.txt  discord_command_premium.hpp  discord_command_premium_impl.cpp  discord_command_premium_impl.hpp
src/modules/discord/discord_games/discord_games_manager/: CMakeLists.txt  discord_games_manager.hpp  discord_games_manager_impl.cpp  discord_games_manager_impl.hpp
src/modules/discord/discord_interactions_handler/discord_button_click_handler/: CMakeLists.txt  discord_button_click_handler.hpp  discord_button_click_handler_impl.cpp  discord_button_click_handler_impl.hpp
src/modules/discord/discord_interactions_handler/discord_select_menu_handler/: CMakeLists.txt  discord_select_menu_handler.hpp  discord_select_menu_handler_impl.cpp  discord_selectmenu_handler_impl.hpp
src/modules/discord/discord_logging/: CMakeLists.txt  discord_logging.cpp  discord_logging.hpp  discord_logging_impl.cpp  discord_logging_impl.hpp
src/modules/discord/discord_statistics_collector/: CMakeLists.txt  discord_statistics_collector.hpp  discord_statistics_collector_impl.cpp  discord_statistics_collector_impl.hpp
src/modules/discord/gamescoin_manager/: CMakeLists.txt  gamescoin_manager.hpp  gamescoin_manager_impl.cpp  gamescoin_manager_impl.hpp
src/modules/image_processing/: CMakeLists.txt  image.hpp  image_impl.cpp  image_impl.hpp  image_processing.hpp  image_processing_impl.cpp  image_processing_impl.hpp
src/modules/logging/: CMakeLists.txt  logging.cpp  logging.hpp  logging_impl.cpp  logging_impl.hpp
src/modules/webserver/: CMakeLists.txt  webserver.hpp  webserver_impl.cpp  webserver_impl.hpp
src/modules/webserver/api/: commands_page.cpp  commands_page.hpp  dashboard_page.cpp  dashboard_page.hpp  discord_login.cpp  discord_login.hpp  index_page.cpp  index_page.hpp  patreon.cpp  patreon.hpp  premium.cpp  premium.hpp  topgg_webhook.cpp  topgg_webhook.hpp
src/modules/webserver/utils/: cookie_manager.cpp  cookie_manager.hpp  other.cpp  other.hpp  type_conversions.cpp  type_conversions.hpp  type_convertions.cpp  type_convertions.hpp  validators.cpp  validators.hpp
(+356 files in other folders)
